<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        "
        <Button
            android:id="@+id/redgogreengo"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/redgogreengo" />
        
         <Button
            android:id="@+id/redgogreengobullets"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/redgogreengobullets" />
         
         <Button
            android:id="@+id/redgogreengobullets_splitscreen"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/redgogreengobullets_splitscreen" />
         
         <Button
            android:id="@+id/redgreengo"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/redgreengo" />
         
        <Button
            android:id="@+id/circlesingle"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/circlesingle" />
        
         <Button
            android:id="@+id/circlesingledirect"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/circlesingledirect" />
         <Button
            android:id="@+id/flagtrack1"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/flagtrack1" />

        <Button
            android:id = "@+id/debugBattle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text = "debugBattle" />

    </LinearLayout>
    

</RelativeLayout>